Super big Model UPDATE
Added a supercool context manager, insert and all are no problem. Plus now a method to dump everything is available. Plus Entleiht Table has been added. Every table should be 100% complete now.

--- a/Model/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/Model/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
-LastDrive=T:
-LastDirectory=\Klasse 10.11\SQLiteDatabaseBrowserPortable
+LastDrive=E:
+LastDirectory=\FMS\Model\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=T:
+PAL:LastPortableAppsBaseDir=E:\FMS
