Implemented MySQL Database Access

--- a/Model/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
+++ b/Model/SQLiteDatabaseBrowserPortable/Data/settings/SQLiteDatabaseBrowserPortableSettings.ini
@@ -1,5 +1,5 @@
 [SQLiteDatabaseBrowserPortableSettings]
-LastDrive=E:
-LastDirectory=\FMS\Model\SQLiteDatabaseBrowserPortable
+LastDrive=C:
+LastDirectory=\Users\alter\Documents\Schule\Informatik-LK\Projekte\FMS\Model\SQLiteDatabaseBrowserPortable
 [PortableApps.comLauncherLastRunEnvironment]
-PAL:LastPortableAppsBaseDir=E:\FMS
+PAL:LastPortableAppsBaseDir=C:\Users\alter\Documents\Schule\Informatik-LK\Projekte\FMS
